test/result.txt
C:\Users\Noah\AppData\Roaming\npm\node_modules\mocha\lib\utils.js:628
        throw new Error("cannot resolve path (or pattern) '" + path + "'");
        ^

Error: cannot resolve path (or pattern) 'test/**/*_test.js'
    at Object.lookupFiles (C:\Users\Noah\AppData\Roaming\npm\node_modules\mocha\lib\utils.js:628:15)
    at C:\Users\Noah\AppData\Roaming\npm\node_modules\mocha\bin\_mocha:326:30
    at Array.forEach (native)
    at Object.<anonymous> (C:\Users\Noah\AppData\Roaming\npm\node_modules\mocha\bin\_mocha:325:6)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:140:18)
    at node.js:1001:3
